added header & logo

--- a/prices.html
+++ b/prices.html
@@ -78,6 +78,113 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- //header -->
     <!-- navigation -->
 
+    <!-- navigation -->
+            <div class="navigation-agileits">
+                <div class="container">
+                    <nav class="navbar navbar-default">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <div class="navbar-header nav_2">
+                            <button type="button" class="navbar-toggle collapsed navbar-toggle1" data-toggle="collapse" data-target="#bs-megadropdown-tabs">
+                                            <span class="sr-only">Toggle navigation</span>
+                                            <span class="icon-bar"></span>
+                                            <span class="icon-bar"></span>
+                                            <span class="icon-bar"></span>
+                                        </button>
+                        </div>
+                        <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
+                            <ul class="nav navbar-nav">
+                                <li class="active"><a href="index.html" class="act">Home</a></li>
+                                <!-- Mega Menu -->
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Groceries<b class="caret"></b></a>
+                                    <ul class="dropdown-menu multi-column columns-3">
+                                        <div class="row">
+                                            <div class="multi-gd-img">
+                                                <ul class="multi-column-dropdown">
+                                                    <h6>All Groceries</h6>
+                                                    <li><a href="quote.html">Rice & Rice Products</a></li>
+                                                    <li><a href="quote.html">Dals & Pulses</a></li>
+                                                    <li><a href="quote.html">Flours & Sooji</a></li>
+                                                    <li><a href="quote.html">Oils & ghee</a></li>
+                                                    <li><a href="quote.html">Dry Fruits</a></li>
+                                                    <li><a href="quote.html">Masalas & Spices</a></li>
+                                                </ul>
+                                            </div>
+
+                                        </div>
+                                    </ul>
+                                </li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Organic<b class="caret"></b></a>
+                                    <ul class="dropdown-menu multi-column columns-3">
+                                        <div class="row">
+                                            <div class="multi-gd-img">
+                                                <ul class="multi-column-dropdown">
+                                                    <h6>All Organic</h6>
+                                                    <li><a href="quote.html">Rice & Rice Products</a></li>
+                                                    <li><a href="quote.html">Dals & Pulses</a></li>
+                                                    <li><a href="quote.html">Flours & Sooji</a></li>
+                                                    <li><a href="quote.html">Oils & ghee</a></li>
+                                                    <li><a href="quote.html">Dry Fruits</a></li>
+                                                    <li><a href="quote.html">Masalas & Spices</a></li>
+                                                </ul>
+                                            </div>
+
+
+                                        </div>
+                                    </ul>
+                                </li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Branded Foods<b class="caret"></b></a>
+                                    <ul class="dropdown-menu multi-column columns-3">
+                                        <div class="row">
+                                            <div class="multi-gd-img">
+                                                <ul class="multi-column-dropdown">
+                                                    <h6>Packaged Foods</h6>
+                                                    <li><a href="quote.html">Sauces & Ketchup</a></li>
+                                                    <li><a href="quote.html">Noodles & Pasta</a></li>
+                                                    <li><a href="quote.html">Pickles</a></li>
+                                                    <li><a href="quote.html">Breakfast Cereals</a></li>
+                                                    <li><a href="quote.html">Ready to Eat</a></li>
+                                                    <li><a href="quote.html">Choclates & Sweets</a></li>
+                                                    <li><a href="quote.html">Biscuits</a></li>
+                                                </ul>
+                                            </div>
+
+                                        </div>
+                                    </ul>
+                                </li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Beverages<b class="caret"></b></a>
+                                    <ul class="dropdown-menu multi-column columns-3">
+                                        <div class="row">
+                                            <div class="multi-gd-img">
+                                                <ul class="multi-column-dropdown">
+                                                    <h6>Tea & Coffee</h6>
+                                                    <li><a href="quote.html">Tea & Coffee</a></li>
+                                                    <li><a href="quote.html">Mineral Water</a></li>
+                                                    <li><a href="quote.html">Soft Drinks</a></li>
+                                                    <li><a href="quote.html">Fruit Drinks & juices</a></li>
+                                                    <li><a href="quote.html">Energy & Health Drinks </a></li>
+                                                    <li><a href="quote.html">Milk shakes</a></li>
+                                                </ul>
+                                            </div>
+
+                                        </div>
+                                    </ul>
+                                </li>
+                                <li><a href="quote.html">Gourmet</a></li>
+        <!--                        <li><a href="offers.html">Offers</a></li>-->
+                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="quote.html" style="background-color: #fe9126">GET QUOTE</a></li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+
+            <!-- //navigation -->
+
         <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSbFpQu2k5zq0cSqnkPOI-ppy-OO-h2DWX-5KbeDAVTQ6qY5C3xzmp8m1LQM2oA_AoJmNGGyDQQta-b/pubhtml?widget=true&amp;headers=false" frameborder="0" scrolling="yes" seamless="seamless" style="display:block; width:100%; height:100vh;"></iframe>
 
 <!-- contact -->
