--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </p>
                     </div>
                     <div class="col-md-6 text-center">
-                        <img src="images/template-easy-customize.png" alt="" class="img-responsive">
+                        <img src="images/vendor-1.jpg" alt="" class="img-responsive">
                     </div>
                 </div>
             </div>
@@ -274,7 +274,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center">
-                        <img src="images/template-easy-code.png" alt="" class="img-responsive">
+                        <img src="images/value-time-quality.jpg" alt="" class="img-responsive">
                     </div>
                     <div class="col-md-6">
                         <h2 class="text-uppercase">Better Quality &amp; Lowest Prices</h2>
@@ -302,7 +302,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </p>
                     </div>
                     <div class="col-md-6 text-center">
-                        <img src="images/template-easy-customize.png" alt="" class="img-responsive">
+                        <img src="images/grocer.jpg" alt="" class="img-responsive">
                     </div>
                 </div>
             </div>
