--- a/contact.html
+++ b/contact.html
@@ -237,7 +237,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h3>Contact Info</h3>
 						<p>HSR Layout, Bangalore.</p>
 						<ul class="wthree_contact_info_address">
-							<li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:ganasaiproducts@gmail.com">ganasaiproducts@gmail.com</a></li>
+							<li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:nevedanretailservices@gmail.com">nevedanretailservices@gmail.com</a></li>
 							<li><i class="fa fa-phone" aria-hidden="true"></i>+91 70225 95535</li>
 						</ul>
 						<div class="w3_agile_social_icons w3_agile_social_icons_contact">
@@ -284,7 +284,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					
 					<ul class="address">
 						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>HSR Layout, <span>Bangalore.</span></li>
-						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:ganasaiproducts@gmail.com">ganasaiproducts@gmail.com</a></li>
+						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:nevedanretailservices@gmail.com">nevedanretailservices@gmail.com</a></li>
 						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+91 70225 95535</li>
 						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+91 70225 95535</li>
 					</ul>
