--- a/prices.html
+++ b/prices.html
@@ -26,6 +26,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- //js -->
 <link href='//fonts.googleapis.com/css?family=Raleway:400,100,100italic,200,200italic,300,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="http://www.jacklmoore.com/colorbox/example1/colorbox.css" />
+
 <!-- start-smoth-scrolling -->
 <script type="text/javascript" src="js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>
@@ -184,6 +186,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
 
             <!-- //navigation -->
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://www.jacklmoore.com/colorbox/jquery.colorbox.js"></script>
+    <script>
+      function openColorBox() {
+        $.colorbox({
+          innerWidth:500,
+          innerHeight:500,
+          iframe:true,
+          href: "subscribe.html",
+          overlayClose:false,
+          onLoad: function() {
+            $('#cboxClose').remove();
+          }
+        });
+      }
+      setTimeout(openColorBox, 1000);
+    </script>
 
         <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSbFpQu2k5zq0cSqnkPOI-ppy-OO-h2DWX-5KbeDAVTQ6qY5C3xzmp8m1LQM2oA_AoJmNGGyDQQta-b/pubhtml?widget=true&amp;headers=false" frameborder="0" scrolling="yes" seamless="seamless" style="display:block; width:100%; height:65vh;"></iframe>
 
